# rotors_simulator-1

polaris_description/models/: model-1_4.sdf  model-1_4_with_ptu.sdf
polaris_simple_control_plugin/: CMakeLists.txt
polaris_simple_control_plugin/control/: ptu_control.yaml
polaris_simple_control_plugin/include/: ptu_simple_control_plugin.h
polaris_simple_control_plugin/launch/: empty_world.launch  empty_world_with_ptu.launch  spawn_polaris.launch  spawn_polaris_with_ptu.launch
polaris_simple_control_plugin/src/: ptu_simple_control_plugin.cpp
rotors_gazebo/launch/: fixed_wing_keyboard_teleop.launch  fixed_wing_keyboard_teleop_with_polaris.launch
rotors_gazebo/worlds/: rafz.world
rotors_gazebo_plugins/src/: gazebo_view_control_plugin.cpp
rotors_joy_interface/src/: key_teleop.cpp
